--- a/client/src/components/navBar/nav-styles.scss
+++ b/client/src/components/navBar/nav-styles.scss
@@ -11,7 +11,9 @@
   height: 60px;
   justify-content: space-between;
   padding: 0 20px;
-  width: 100vw;
+  position: sticky;
+  top: 0;
+  width: 100%;
 
   .links {
     display: flex;
