--- a/client/src/components/utilities/_initialize-styles.scss
+++ b/client/src/components/utilities/_initialize-styles.scss
@@ -1,12 +1,13 @@
 @import "./variables";
 
-
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 body {
-    background-color: $backgroundColor;
+  background-color: $backgroundColor;
+  height: 100%;
+  width: 100%;
 }
