modify structure and home page

--- a/client/src/components/footer/styles/footer.scss
+++ b/client/src/components/footer/styles/footer.scss
@@ -1,4 +1,6 @@
+@import "./../../utilities/variables";
 .footer {
+  color: $headingColor;
   position: absolute;
   text-align: center;
   bottom: 0;
