--- a/client/src/components/navBar/styles/nav-styles.css
+++ b/client/src/components/navBar/styles/nav-styles.css
@@ -1,20 +1,8 @@
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
-body {
-  background-color: #e6dedd;
-  height: 100%;
-  width: 100%;
-}
-
 .navigation-bar {
-  align-items: baseline;
+  align-items: center;
   background-color: #1b120f;
   box-shadow: 0 2px 2px 0 #1b120f;
-  color: #f89d13;
+  color: #c89d2c;
   display: flex;
   font-family: "Merriweather", serif;
   height: 60px;
@@ -25,27 +13,32 @@ body {
   width: 100%;
 }
 
-.navigation-bar .links {
-  display: flex;
-  list-style: none;
+.navigation-bar .logo {
+  width: 70px;
+  height: 70px;
 }
 
-.navigation-bar .links li {
-  margin: auto 10px;
+.navigation-bar .links {
+  align-self: flex-end;
+  display: flex;
+  justify-content: space-between;
+  list-style: none;
+  margin-right: 20px;
+  width: 15%;
 }
 
 .navigation-bar .links #dropdownMenuLink {
-  text-decoration: none;
   color: inherit;
+  text-decoration: none;
 }
 
 .navigation-bar .links .services-menu {
-  margin-top: 10px;
   background-color: #1b120f;
+  margin-top: 10px;
 }
 
 .navigation-bar .links .services-menu a {
-  color: #f89d13;
+  color: #c89d2c;
 }
 
 .navigation-bar .links .services-menu a:hover {
