--- a/client/src/components/navBar/styles/nav-styles.scss
+++ b/client/src/components/navBar/styles/nav-styles.scss
@@ -1,8 +1,7 @@
-@import "./../utilities/variables";
-@import "./../utilities/initialize-styles";
+@import "./../../utilities/variables";
 
 .navigation-bar {
-  align-items: baseline;
+  align-items: center;
   background-color: $navBarColor;
   box-shadow: 0 2px 2px 0 rgba(27, 18, 15, 1);
   color: $headingColor;
@@ -15,22 +14,28 @@
   top: 0;
   width: 100%;
 
-  .links {
-    display: flex;
-    list-style: none;
+  .logo {
+    width: 70px;
+    height: 70px;
+  }
 
-    li {
-      margin: auto 10px;
-    }
+  .links {
+    align-self: flex-end;
+    display: flex;
+    justify-content: space-between;
+    list-style: none;
+    margin-right: 20px;
+    width: 15%;
 
     #dropdownMenuLink {
-      text-decoration: none;
       color: inherit;
+      text-decoration: none;
     }
 
     .services-menu {
-      margin-top: 10px;
       background-color: $navBarColor;
+      margin-top: 10px;
+
       a {
         color: $headingColor;
       }
