--- a/client/src/components/navBar/styles/nav-styles.css
+++ b/client/src/components/navBar/styles/nav-styles.css
@@ -8,9 +8,10 @@
   height: 60px;
   justify-content: space-between;
   padding: 0 20px;
-  position: sticky;
+  position: fixed;
   top: 0;
   width: 100%;
+  z-index: 100;
 }
 
 .navigation-bar .logo {
