--- a/client/src/components/navBar/styles/nav-styles.scss
+++ b/client/src/components/navBar/styles/nav-styles.scss
@@ -10,9 +10,10 @@
   height: 60px;
   justify-content: space-between;
   padding: 0 20px;
-  position: sticky;
+  position: fixed;
   top: 0;
   width: 100%;
+  z-index: 100;
 
   .logo {
     width: 70px;
