refactor code by adding styles modules to the components

--- a/client/src/components/navBar/styles/nav-styles.module.css
+++ b/client/src/components/navBar/styles/nav-styles.module.css
@@ -28,7 +28,7 @@
   width: 15%;
 }
 
-.navigation-bar .links #dropdownMenuLink {
+.navigation-bar .links .dropdownMenuLink {
   color: inherit;
   text-decoration: none;
 }
