--- a/client/src/components/navBar/styles/nav-styles.module.scss
+++ b/client/src/components/navBar/styles/nav-styles.module.scss
@@ -28,7 +28,7 @@
     margin-right: 20px;
     width: 15%;
 
-    #dropdownMenuLink {
+    .dropdownMenuLink {
       color: inherit;
       text-decoration: none;
     }
