--- a/client/src/components/navBar/styles/nav-styles.module.scss
+++ b/client/src/components/navBar/styles/nav-styles.module.scss
@@ -15,6 +15,11 @@
   width: 100%;
   z-index: 100;
 
+  a {
+    text-decoration: none;
+    color: inherit;
+  }
+
   .logo {
     width: 70px;
     height: 70px;
