--- a/client/src/components/card/styles/card.module.scss
+++ b/client/src/components/card/styles/card.module.scss
@@ -4,14 +4,16 @@
   background-color: $backgroundColor;
   color: $navBarColor;
   font-family: $textFont;
-  height: 30%;
   width: 20%;
 
   .card-heading {
     font-size: 1.4rem;
     font-weight: bold;
+    text-align: center;
   }
+
   .card-body {
     font-size: 1.1rem;
+    text-align: justify;
   }
 }
