--- a/client/src/components/contactChannels/styles/contact-channels.module.scss
+++ b/client/src/components/contactChannels/styles/contact-channels.module.scss
@@ -1,20 +1,20 @@
 @import "./../../utilities/variables";
 
-.contact-channels{
-    color: $backgroundColor;
-    list-style: none;
-    height: 100%;
-    margin-left: 300px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    height: inherit;
-   a{
-       text-decoration: none;
-       color: inherit;
-   }
-   a:hover{
-       color:$headingColor;
-   }
-   
+.contact-channels {
+  color: $backgroundColor;
+  display: flex;
+  flex-direction: column;
+  height: inherit;
+  list-style: none;
+  margin-left: 300px;
+  justify-content: space-evenly;
+
+  a {
+    text-decoration: none;
+    color: inherit;
+
+    &:hover {
+      color: $headingColor;
+    }
+  }
 }
