--- a/client/src/components/navBar/styles/nav-styles.module.css
+++ b/client/src/components/navBar/styles/nav-styles.module.css
@@ -15,13 +15,17 @@
 }
 
 .navigation-bar a {
-  text-decoration: none;
   color: inherit;
+  text-decoration: none;
+}
+
+.navigation-bar a:hover {
+  color: #c8c32c;
 }
 
 .navigation-bar .logo {
-  width: 70px;
   height: 70px;
+  width: 70px;
 }
 
 .navigation-bar .links {
@@ -38,6 +42,10 @@
   text-decoration: none;
 }
 
+.navigation-bar .links .dropdownMenuLink:hover {
+  color: #c8c32c;
+}
+
 .navigation-bar .links .services-menu {
   background-color: #1b120f;
   margin-top: 10px;
@@ -49,4 +57,5 @@
 
 .navigation-bar .links .services-menu a:hover {
   background-color: #e6dedd;
+  color: #1b120f;
 }
