--- a/client/src/components/navBar/styles/nav-styles.module.scss
+++ b/client/src/components/navBar/styles/nav-styles.module.scss
@@ -16,13 +16,17 @@
   z-index: 100;
 
   a {
-    text-decoration: none;
     color: inherit;
+    text-decoration: none;
+
+    &:hover {
+      color: $navigationHover;
+    }
   }
 
   .logo {
-    width: 70px;
     height: 70px;
+    width: 70px;
   }
 
   .links {
@@ -36,6 +40,10 @@
     .dropdownMenuLink {
       color: inherit;
       text-decoration: none;
+
+      &:hover {
+        color: $navigationHover;
+      }
     }
 
     .services-menu {
@@ -44,10 +52,10 @@
 
       a {
         color: $headingColor;
-      }
-
-      a:hover {
-        background-color: $backgroundColor;
+        &:hover {
+          background-color: $backgroundColor;
+          color: $navBarColor;
+        }
       }
     }
   }
