restructure folders and files

--- a/client/src/components/contactChannels/styles/contact-channels.module.scss
+++ b/client/src/components/contactChannels/styles/contact-channels.module.scss
@@ -1,4 +1,4 @@
-@import "./../../utilities/variables";
+@import "./../../utilities/variables/colors/colors";
 
 .contact-channels {
   color: $backgroundColor;
