--- a/client/src/components/about/styles/about.module.scss
+++ b/client/src/components/about/styles/about.module.scss
@@ -1,4 +1,5 @@
-@import "./../../utilities/variables";
+@import "./../../utilities/variables/colors/colors";
+@import "./../../utilities/variables/fonts/fonts";
 
 .about-header {
   color: $headingColor;
