--- a/client/src/components/card/styles/card.module.scss
+++ b/client/src/components/card/styles/card.module.scss
@@ -1,4 +1,5 @@
-@import "./../../utilities/variables";
+@import "./../../utilities/variables/colors/colors";
+@import "./../../utilities/variables/fonts/fonts";
 
 .card-container {
   background-color: $backgroundColor;
