--- a/client/src/components/footer/styles/footer.module.css
+++ b/client/src/components/footer/styles/footer.module.css
@@ -1,6 +1,7 @@
 .footer {
   bottom: 0;
   color: #c89d2c;
+  font-family: "Montserrat", sans-serif;
   position: absolute;
   text-align: center;
   width: 100%;
