--- a/client/src/components/sendRequest/styles/send.module.scss
+++ b/client/src/components/sendRequest/styles/send.module.scss
@@ -1,4 +1,5 @@
-@import "./../../utilities/variables";
+@import "./../../utilities/variables/colors/colors";
+@import "./../../utilities/variables/fonts/fonts";
 
 .user-request {
   color: $navBarColor;
