--- a/client/src/components/card/styles/card.module.css
+++ b/client/src/components/card/styles/card.module.css
@@ -1,8 +1,9 @@
 .card-container {
   background-color: #e6dedd;
   color: #1b120f;
+  display: inline-block;
   font-family: "Montserrat", sans-serif;
-  position: relative;
+  margin: 10px;
   width: 20%;
 }
 
@@ -19,14 +20,16 @@
   text-align: justify;
 }
 
+.card-container .center-text {
+  text-align: center;
+}
+
 .card-container .view-full-card {
   border: #1b120f 1px solid;
   color: #1b120f;
   font-family: inherit;
   margin-top: 10px;
-  margin-bottom: 20px;
-  margin-left: 20px;
-  width: 50%;
+  width: 100%;
 }
 
 .card-container .view-full-card:hover, .card-container .view-full-card:active {
