--- a/client/src/components/utilities/intialize-styles/intialize-styles.scss
+++ b/client/src/components/utilities/intialize-styles/intialize-styles.scss
@@ -1,11 +1,5 @@
 @import "./../variables/colors/colors";
 
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
 body {
-  background-color: $backgroundColor;
+  background-color: $backgroundColor !important;
 }
