add services card

--- a/client/src/components/hotel/styles/hotel.module.css
+++ b/client/src/components/hotel/styles/hotel.module.css
@@ -1,6 +1,4 @@
-.hotel-container {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  margin: 70px auto 100px;
+.hotel-list {
+  margin: 70px 20px 100px;
+  width: 40%;
 }
