--- a/client/src/components/service/styles/service.module.css
+++ b/client/src/components/service/styles/service.module.css
@@ -2,3 +2,26 @@
   margin: 70px 20px 100px;
   width: 40%;
 }
+
+.hotel-list .service-card {
+  font-family: "Montserrat", sans-serif;
+  position: relative;
+}
+
+.hotel-list .service-card .view-side-page {
+  border: #1b120f 1px solid;
+  color: #1b120f;
+  font-family: inherit;
+  margin-top: 10px;
+  position: absolute;
+  bottom: 10px;
+  right: 10px;
+}
+
+.hotel-list .service-card .view-side-page:hover, .hotel-list .service-card .view-side-page:active {
+  background-color: #1b120f;
+  box-shadow: none;
+  color: #e6dedd;
+  outline: none;
+  border: none;
+}
