--- a/client/src/components/reservedItem/styles/reserved-item.module.css
+++ b/client/src/components/reservedItem/styles/reserved-item.module.css
@@ -1,8 +1,9 @@
 .item {
   align-items: baseline;
   display: flex;
+  justify-content: space-between;
   height: 30px;
-  width: 40%;
+  width: 30%;
 }
 
 .item .item-counter {
@@ -23,7 +24,7 @@
 }
 
 .item .item-name {
-  margin-right: 20px;
+  margin-right: 50px;
   font-size: 1.2rem;
   font-weight: bold;
 }
