--- a/client/src/components/reservationForm/styles/reservation-form.module.scss
+++ b/client/src/components/reservationForm/styles/reservation-form.module.scss
@@ -14,6 +14,14 @@
     box-shadow: 0 0 3px $navBarColor;
   }
 
+  .terms {
+    align-items: baseline;
+    display: flex;
+    height: 25px;
+    .terms-checkbox {
+      margin-right: 5px;
+    }
+  }
   .reservation-button {
     @include button($navBarColor, $backgroundColor);
     margin: 10px auto;
